# rocket-webhook

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.zed/: settings.json
examples/: github.rs  stripe.rs
src/: error.rs  guard.rs  lib.rs  state.rs  webhooks.rs
src/webhooks/: built_in.rs  generic.rs  github.rs  interface.rs  shopify.rs  slack.rs  stripe.rs  utils.rs
src/webhooks/built_in/: discord.rs  github.rs  sendgrid.rs  shopify.rs  slack.rs  standard.rs  stripe.rs  svix.rs
src/webhooks/generic/: hmac.rs
src/webhooks/interface/: hmac.rs  public_key.rs
src/webhooks/interface/public_key/: algorithms.rs
tests/: built_in.rs  generic.rs  multiple.rs
