[package]
name = "rocket-webhook"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { version = "0.22", optional = true }
bon = "3.8"
hex = "0.4"
hmac = { version = "0.12", optional = true }
ring = { version = "0.17", optional = true }
rocket = { version = "0.5", features = ["json"] }
sha2 = { version = "0.10", optional = true }
tokio-util = { version = "0.7", features = ["io"], optional = true }
zeroize = { version = "1.8", optional = true }

[dev-dependencies]
serde = "1.0.228"

[features]
discord = ["public-key"]
github = ["hmac"]
hmac = ["dep:hmac", "dep:sha2", "dep:tokio-util", "dep:zeroize"]
public-key = ["dep:ring", "dep:tokio-util"]
sendgrid = ["public-key"]
shopify = ["dep:base64", "hmac"]
slack = ["hmac"]
stripe = ["hmac"]
