[package]
name = "rocket-webhook"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { version = "0.22", optional = true }
bon = "3.8"
ed25519-dalek = { version = "2.2", optional = true }
hex = "0.4"
hmac = { version = "0.12", optional = true }
p256 = { version = "0.13", optional = true }
rocket = { version = "0.5", features = ["json"] }
sha2 = { version = "0.10", optional = true }
tokio-util = { version = "0.7", features = ["io"], optional = true }
zeroize = { version = "1.8", optional = true }

[dev-dependencies]
serde = "1.0.228"

[features]
discord = ["ed25519", "public-key"]
ed25519 = ["dep:ed25519-dalek"]
github = ["hmac"]
hmac = ["dep:hmac", "dep:sha2", "dep:tokio-util", "dep:zeroize"]
p256 = ["dep:p256"]
public-key = ["dep:tokio-util"]
sendgrid = ["dep:base64", "p256", "public-key"]
shopify = ["dep:base64", "hmac"]
slack = ["hmac"]
stripe = ["hmac"]
svix = ["hmac"]
