[package]
name = "rocket-webhook"
version = "0.1.0-alpha.1"
edition = "2024"
description = "Webhook validation for Rocket applications"
homepage = "https://github.com/fa-sharp/rocket-webhook"
repository = "https://github.com/fa-sharp/rocket-webhook"
license = "MIT"
keywords = [
  "ecdsa",
  "hmac",
  "rocket",
  "validation",
  "webhook",
]
categories = [
  "authentication",
  "web-programming",
  "web-programming::http-server",
]
exclude = [".config/", ".github/"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
base64 = { version = "0.22", optional = true }
bon = "3.8"
ed25519-dalek = { version = "2.2", optional = true }
hex = "0.4"
hmac = { version = "0.12", optional = true }
p256 = { version = "0.13", optional = true }
rocket = { version = "0.5", features = ["json"] }
sha2 = { version = "0.10", optional = true }
subtle = "2.6"
tokio-util = { version = "0.7", features = ["io"], optional = true }
zeroize = { version = "1.8", optional = true }

[dev-dependencies]
reqwest = "0.12.23"
serde = "1.0.228"

[features]
discord = ["ed25519", "public-key"]
ed25519 = ["dep:ed25519-dalek"]
github = ["hmac"]
hmac = ["dep:hmac", "dep:sha2", "dep:tokio-util", "dep:zeroize"]
p256 = ["dep:p256"]
public-key = ["dep:tokio-util"]
sendgrid = ["dep:base64", "p256", "public-key"]
shopify = ["dep:base64", "hmac"]
slack = ["hmac"]
stripe = ["hmac"]
svix = ["dep:base64", "hmac"]
